adding scan functions

--- a/popup.html
+++ b/popup.html
@@ -28,8 +28,9 @@
 </head>
 <body>
   <input type="text" id="customText" placeholder="Enter custom text (optional)">
-  <button id="generateQrButton">Generate Custom QR</button>
   <div id="qrcode"></div>
+  <button id="scanBtn">Scan QR from Page</button>
+  <div id="result"></div>
   <script src="qrcode.js"></script>
   <script src="popup.js"></script>
 </body>
